DlTable > Sticky columns issues #751 fix: 1.sticky columns and virtual scroll together doesn't work. The stickiness didn't work because both the THEAD and the TH contained the definition position: sticky; And it only had to be in TH so that the stickiness on the left and right side would also work That's why we don't need in THEAD  The CSS TOP definition and z-index

--- a/src/components/compound/DlTable/styles/dl-table-styles.scss
+++ b/src/components/compound/DlTable/styles/dl-table-styles.scss
@@ -9,9 +9,7 @@
     }
 
     thead {
-        top: 0;
         background-color: var(--dl-color-panel-background);
-        z-index: 50;
     }
 
     .sticky-col {
